--- a/railway.toml
+++ b/railway.toml
@@ -2,7 +2,7 @@
 builder = "NIXPACKS"
 
 [deploy]
-startCommand = "gunicorn lentes_project.wsgi:application --bind 0.0.0.0:$PORT"
+startCommand = "daphne -b 0.0.0.0 -p $PORT lentes_project.asgi:application"
 
 [env]
 DJANGO_SETTINGS_MODULE = "lentes_project.settings"
